[tool.poetry]
name = "martcal"
version = "0.1.0"
description = "Calculate the distance from any point at sea to a port, accounting for land masses"
authors = [
    "Jordan Taylor",
    "Miodrag Tokić"
]

[tool.poetry.dependencies]
python = "^3.7"
geopy = "^1.19"
trianglesolver = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
