[tool.poetry]
name = "martcal"
version = "0.1.0"
description = "Calculate the distance from any point at sea to a port, accounting for land masses"
authors = [
    "Jordan Taylor",
    "Miodrag Tokić"
]

[tool.poetry.dependencies]
python = "^3.5"
geopy = "^1.19"
trianglesolver = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
