[tool.poetry]
name = "martcal"
version = "0.1.0-beta"
description = "Calculate the distance from any point at sea to a port, accounting for land masses"
authors = [
    "Jordan Taylor",
    "Miodrag Tokić"
]
license = "MIT"

readme = "README.md"

homepage = "http://jordantaylor.io"
repository = "https://github.com/tayljordan/martcal"
documentation = "https://github.com/tayljordan/martcal/tree/master/doc"

keywords = ["GIS", "routing", "maritime"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.5"
geopy = "^1.19"
trianglesolver = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
